<resources>
    <string name="app_name">银龄生活宝</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for tech.krauwarrior.silverhelper.fragments for navigation -->
    <string name="main_page_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="title_setting">设置</string>

    <!-- Strings used for the main page -->
    <string name="main_doctor">看病</string>
    <string name="main_shopping">买菜</string>
    <string name="main_family">亲人</string>
    <string name="main_transport">出行</string>
    <string name="main_call_nurse">叫护工</string>
    <string name="main_emergency_call">报警</string>
    <string name="main_health_qrcode">健康码</string>
    <string name="main_payment_qrcode">付款码</string>
    <string name="video_recommend_title">视频推荐</string>
    <string name="placeholder_videos_recommendation">视频推荐轮播区域，点击播放各种生活妙招、日常APP使用指南等。</string>
    <string name="placeholder_pandemic_info">国内疫情</string>
    <string name="title_anti_fraud">国家反诈中心APP</string>
    <string name="fab_description">语音按钮</string>

    <!-- Strings used for the settings page -->
    <string name="previous">返回</string>
    <string name="settings_community">社区信息设置</string>
    <string name="settings_family">亲人信息设置</string>
    <string name="settings_address">默认地址设置</string>
    <string name="settings_security">账号安全设置</string>
    <string name="settings_services">联系客服</string>
    <string name="settings_about">关于软件</string>
    <string name="settings_delete_account">注销账号</string>
    <string name="settings_logout">退出登录</string>
    <!-- 看病 -->
<!--    <string name="medic_title">看病</string>-->
    <string name="medic_title">看病-通惠社区</string>
    <string name="medic_name_doctor">张医生</string>
    <string name="medic_dept_doctor">社区医生</string>
    <string name="medic_call_doctor">电话联系</string>
    <string name="medic_name_clinic">社区诊所</string>
    <string name="medic_district_clinic">狮子山街道</string>
    <string name="medic_call_clinic">电话</string>
    <string name="medic_map_clinic">地图</string>
    <string name="medic_title_webview">常用药与常见症状</string>
    <string name="medic_placeholder_1_webview">阿莫西林—头疼感冒\n</string>
    <string name="medic_placeholder_2_webview">畏寒怕冷怎么办？\n</string>
    <!-- 报警 -->
    <string name="settings_firstAid">120急救</string>
    <string name="settings_police">110公安</string>
    <string name="settings_firemen">119消防</string>
    <string name="settings_trafficPolice">122交警</string>
    <string name="settings_hint">在您报警的同时我们将会发送警报到您的家人的手机上。\n\n提示：\n报警将采用反触发的方式拨打，即按下报警后3秒内没有取消就会拨打对应的报警电话。</string>
    <!-- 出行 -->
    <string name="transport_start">起点</string>
    <string name="transport_start_1">南李路武昌首义学院</string>
    <string name="transport_destination">请输入目的地</string>
    <string name="transport_final">终点</string>
    <string name="transport_final_1">东湖</string>
    <string name="transport_taxi">打车</string>
    <string name="transport_bus">公交车</string>
    <string name="transport_park">附近公园</string>
    <string name="transport_park_1">(滑动卡片)</string>
    <string name="transport_park_type">紫阳公园</string>
    <string name="transport_park_site">武昌区张之洞路</string>
    <string name="transport_park_level">评分</string>
    <string name="transport_go">去这里</string>
    <!-- 买菜 -->
    <string name="transport_s1">社区买菜</string>
    <string name="transport_s2">我买到的</string>
    <string name="transport_s3">南李路22号</string>
    <string name="transport_s4">更换地址</string>
    <string name="transport_s5">蔬菜</string>
    <string name="transport_s6">水果</string>
    <string name="transport_s7">粮油</string>
    <string name="transport_s8">配料</string>
    <string name="transport_s9">日用</string>
    <string name="transport_s10">工具</string>
    <string name="transport_s11">鲁花压榨花生油\n1升</string>
    <string name="transport_s12">￥39元</string>
    <string name="transport_s13">大米\n1袋</string>
    <string name="transport_s14">￥39元</string>
    <!-- 亲人 -->
    <string name="family_title">亲人</string>

    <string name="hello_first_fragment">您好，今天您想做什么？</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>