<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="2"
                android:text="@string/title_setting"
                android:textSize="72sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_settings_back"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="top"
                android:text="@string/previous"
                android:textSize="26sp"
                android:maxHeight="60dp"
                android:minHeight="55dp"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_circle_arrow_left_solid"
                app:iconTint="@color/black"
                app:strokeColor="#FF000000"
                app:strokeWidth="0.5dp"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/settings_background"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_settings_community"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="65dp"
                    android:minHeight="60dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/settings_community"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    android:textColor="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_settings_family"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="65dp"
                    android:minHeight="60dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/settings_family"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    android:textColor="@color/black"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_settings_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="65dp"
                    android:minHeight="60dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/settings_address"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    android:textColor="@color/black"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_settings_security"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="65dp"
                    android:minHeight="60dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/settings_security"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    android:textColor="@color/black"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_settings_services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="65dp"
                    android:minHeight="60dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/settings_services"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    android:textColor="@color/black"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_settings_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:maxHeight="65dp"
                    android:minHeight="60dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/settings_about"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    android:textColor="@color/black"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_settings_delete_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:maxHeight="65dp"
                    android:minHeight="60dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/settings_delete_account"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    android:textColor="@color/red"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_settings_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="65dp"
                    android:minHeight="60dp"
                    android:text="@string/settings_logout"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>