<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainPageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="12dp"
            android:paddingBottom="0dp">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:text="@string/transport_s1"
            android:textColor="@color/white"
            android:textSize="45dp"
            android:textStyle="bold" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_main_shop1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:includeFontPadding="false"
            android:paddingVertical="10dp"
            android:text="@string/transport_s2"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            app:cornerRadius="15dp" />

        </TableRow>
    </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/section_half_transparent_white"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingVertical="10dp">
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingStart="12dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="12dp"
                            android:paddingBottom="0dp">
                            <TextView
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:text="@string/transport_s3"
                                android:textColor="@color/white"
                                android:textSize="30dp"
                                android:textStyle="bold" />
                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/button_main_shop2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/white"
                                android:includeFontPadding="false"
                                android:paddingVertical="10dp"
                                android:text="@string/transport_s4"
                                android:textColor="@color/black"
                                android:textColorHint="@color/white"
                                android:textSize="24sp"
                                app:cornerRadius="15dp" />

                        </TableRow>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_main_shu"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="2dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/white"
                        android:includeFontPadding="false"
                        android:text="@string/transport_s5"
                        android:textColor="@color/black"
                        android:textColorHint="@color/white"
                        android:textSize="24sp"
                        app:cornerRadius="15dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_main_shui"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="2dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/white"
                        android:includeFontPadding="false"
                        android:text="@string/transport_s6"
                        android:textColor="@color/black"
                        android:textColorHint="@color/white"
                        android:textSize="24sp"
                        app:cornerRadius="15dp" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_main_liang"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="2dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/white"
                        android:includeFontPadding="false"
                        android:text="@string/transport_s7"
                        android:textColor="@color/black"
                        android:textColorHint="@color/white"
                        android:textSize="24sp"
                        app:cornerRadius="15dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_main_pei"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="2dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/white"
                        android:includeFontPadding="false"
                        android:text="@string/transport_s8"
                        android:textColor="@color/black"
                        android:textColorHint="@color/white"
                        android:textSize="24sp"
                        app:cornerRadius="15dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_main_re"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="2dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/white"
                        android:includeFontPadding="false"
                        android:text="@string/transport_s9"
                        android:textColor="@color/black"
                        android:textColorHint="@color/white"
                        android:textSize="24sp"
                        app:cornerRadius="15dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_main_gong"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="2dp"
                        android:paddingVertical="5dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/white"
                        android:includeFontPadding="false"
                        android:text="@string/transport_s10"
                        android:textColor="@color/black"
                        android:textColorHint="@color/white"
                        android:textSize="24sp"
                        app:cornerRadius="15dp" />
                    </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp">
                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/you" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/transport_s11"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/transport_s12"
                                android:textAlignment="center"
                                android:textColor="#ff0000" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp">
                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/liang" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/transport_s13"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/transport_s14"
                                android:textAlignment="center"
                                android:textColor="#ff0000" />
                        </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>